<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_title"/>
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/menu_setting"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_signout"
        android:orderInCategory="100"
        android:title="@string/menu_signout"/>

</menu>