<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:background="?android:attr/activatedBackgroundIndicator" >

    <TextView
        android:id="@+id/order_history_title_rest_name"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="25sp"
        android:clickable="false"
        android:focusable="false"
        android:paddingLeft="5sp"
        android:text="@string/rest_info_header"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/order_history_title_price"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:paddingRight="5sp"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/course_price"
        android:textSize="16sp" 
        android:textStyle="bold|italic" >
    </TextView>

    <TextView
        android:id="@+id/order_history_title_order_date"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="20sp"
        android:gravity="left"
        android:maxLines="2"
        android:text="@string/order_order_date"
        android:textSize="12sp"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/order_history_title_delivery_date"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20sp"
        android:gravity="left"
        android:maxLines="2"
        android:text="@string/order_order_delivery_date"
        android:textSize="12sp"
        android:textColor="@android:color/secondary_text_light" />
    
</RelativeLayout>