<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:background="@android:color/background_dark" >
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10sp"
        android:paddingLeft="5sp"
        android:text="@string/course_name"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/order_list_header_cnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10sp"
        android:paddingRight="5sp"
        android:text="@string/course_cnt"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10sp"
        android:layout_toLeftOf="@id/order_list_header_cnt"
        android:text="@string/course_price"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

</RelativeLayout>